# vidyasathi

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEBASE_SUMMARY.md  CONTRIBUTING.md  LICENSE  PROJECT_AUDIT.md  README.md  app.py  assistant.py  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  requirements.txt  run_demo.py  setup.py  submission_report.md  system_prompt.txt  vercel.json
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature.md  Security.md
.gitlab/merge_request_templates/: Bugfix.md  Default-Extended.md  Default.md  Feature.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  index.tsx  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: AnimatedBackground.tsx  ChatInterface.tsx  FeedbackModal.tsx  Header.tsx  LanguageToggle.tsx  MessageBubble.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend/src/contexts/: ThemeContext.tsx
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  feedback.html  index.html
